--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
         <div class="about-inner">
           <h3>Contact</h3>
           <div class="divider"></div>
+          <h3>Under Construction....</h3>
         </div>
         <div class="row d-flex justify-between">
           <div class="col-6">
